modification de la page

--- a/cv-rayan-ahamadi.html
+++ b/cv-rayan-ahamadi.html
@@ -10,8 +10,7 @@
             <p>Marseille, France</p>
             <p><em>(+33) 07 88 62 29 14</em></p>
             <p><em>rayan.ahamadi@laplateforme.io</em></p>
-            <a href="rayana.alwaysdata.net">Mon portfolio</a> <br><br>
-            <a href="https://github.com/rayan-ahamadi"><img src="github-logo.png" 
+            <a href="https://github.com/rayan-ahamadi" target="_blank"><img src="github-logo.png" 
             height="50" width="50"></a> 
             <br><br>
 
